package NYT.NHive.NProto;

import "yt/core/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqPing
{
    required NYT.NProto.TGuid src_cell_guid = 1;
}

message TRspPing
{
    required int32 last_received_message_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSend
{
    required NYT.NProto.TGuid src_cell_guid = 1;
    required int32 first_message_id = 2;
    repeated bytes messages = 3;
}

message TRspSend
{
    required int32 last_received_message_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

